welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:7: error: reassignment to val
	x = x+1
          ^Runner:12: error: reassignment to val
	x = x+1
          ^